--- a/styles/template.css
+++ b/styles/template.css
@@ -1,3 +1,8 @@
+* {
+    /* Text is in hebrew, so i'd be logical to make the direction right to left */
+    direction: rtl;
+}
+
 body {
     margin: 0%;
 }
