--- a/styles/template.css
+++ b/styles/template.css
@@ -1,19 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600;700&display=swap');
+
+:root {
+    --title-color: #151013;
+    --subtitle-color: #1a1a1a;
+}
+
 * {
+    font-family: 'Assistant', sans-serif;
+
     /* Text is in hebrew, so i'd be logical to make the direction right to left */
     direction: rtl;
 }
 
-a {
-    direction: ltr;
-    text-align: center;
-}
-
 body {
+    background-color: khaki;
     margin: 0%;
 }
 
 #hdr {
-    text-align: center;
-    line-height: 10px;
-    padding: 10px;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.title {
+    margin: 0%;
+    color: var(--title-color);
+    font-weight: 700;
+    padding: 2.5vmin;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    display: inherit;
+    margin: 0%;
+}
+
+#ftr {
+    width: 100%;
+    height: 10vh;
+    background-color: cornflowerblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#ftr p {
+    margin: 0%;
+    color: var(--subtitle-color);
+}
+
+#lnks {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 0%;
+    gap: 2vmin;
+}
+
+#lnks .title {
+    padding: 0%;
+}
+
+#lnks > * {
+    transition: .3s ease-in;
+}
+
+#lnks > *:hover {
+    transition: .3s ease-in;
+    transform: scale(1.1);
+}
+
+@media (max-aspect-ratio: 1) {
+    #hdr {
+        align-items: center;
+        justify-content: center;
+    }
+    .title {
+        font-size: 200%;
+    }
 }
