--- a/styles/template.css
+++ b/styles/template.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: khaki;
+    background-color: honeydew;
     margin: 0%;
 }
 
@@ -39,7 +39,7 @@ a {
 #ftr {
     width: 100%;
     height: 10vh;
-    background-color: cornflowerblue;
+    background-color: lightblue;
     display: flex;
     flex-direction: column;
     justify-content: center;
