--- a/styles/template.css
+++ b/styles/template.css
@@ -27,6 +27,7 @@ body {
     color: var(--title-color);
     font-weight: 700;
     padding: 2.5vmin;
+    font-size: clamp(1.5rem, 9vmin, 3rem);
 }
 
 a {
@@ -38,7 +39,7 @@ a {
 
 #ftr {
     width: 100%;
-    height: 10vh;
+    height: 16vh;
     background-color: lightblue;
     display: flex;
     flex-direction: column;
@@ -53,16 +54,19 @@ a {
 
 #lnks {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     position: relative;
     bottom: 0%;
-    gap: 2vmin;
 }
 
 #lnks .title {
     padding: 0%;
+}
+
+#lnks img {
+    max-height: clamp(1.5rem, 9vmin, 3rem);
 }
 
 #lnks > * {
@@ -78,8 +82,5 @@ a {
     #hdr {
         align-items: center;
         justify-content: center;
-    }
-    .title {
-        font-size: 200%;
     }
 }
