--- a/styles/template.css
+++ b/styles/template.css
@@ -13,20 +13,34 @@
 }
 
 body {
-    background-color: honeydew;
+    background-color: floralwhite;
     margin: 0%;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #hdr {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-top: clamp(1rem, 3vmin, 3rem);
+    gap: 1vmin;
+    width: fit-content;
+}
+#hdr img{
+    height: clamp(2rem, 20vmin, 3rem);
 }
 
 .title {
     margin: 0%;
     color: var(--title-color);
     font-weight: 700;
-    padding: 2.5vmin;
     font-size: clamp(1.5rem, 9vmin, 3rem);
 }
 
@@ -40,7 +54,7 @@ a {
 #ftr {
     width: 100%;
     height: 16vh;
-    background-color: lightblue;
+    background-color: #e9e9ed;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -79,8 +93,7 @@ a {
 }
 
 @media (max-aspect-ratio: 1/1) {
-    #hdr {
-        align-items: center;
-        justify-content: center;
+    #hdr .title {
+        display: none;
     }
 }
