--- a/styles/template.css
+++ b/styles/template.css
@@ -53,7 +53,7 @@ a {
 
 #ftr {
     width: 100%;
-    height: 16vh;
+    height: clamp(125px, 16vh, 200px);
     background-color: #e9e9ed;
     display: flex;
     flex-direction: column;
